style.css
/* ... */
.pause-button{
	content:url("img/logos/pausebutton.svg");
	height:186px;
	width:186px;
}

#scroll-sec{
	padding-top:100px;
}
#scroll-text{
	font-family: 'Porkys';
	font-style: normal;
	font-weight: 700;
	font-size: 36px;
	width: 100%;
	max-height: 43px;
	color: var(--black);
	text-shadow: 0px 4px 4px var(--shadow);
}
#scroll{
	content: url("img/logos/home-scroll.svg");
	max-height: 77px;
	width: 100%;
	
}

#insta-box{
	background: var(--transblack1);
}
#welcome{
	content:url("img/logos/home-welcomeksdt.svg");
	height:102px;
	width:100%;
}
#botb{ /* PLACEHOLDER Todo: Insta integration */
	content:url("img/logos/home-botb-ex.svg");
}

/* Blog Page
--------------------------------------------- */
#spotlight{
	font-family:"Porkys";
	font-size: 64px;
	color: white;
	padding-top:100px;
}
#article-box{
	background: var(--transblack2);
}
.bdp-post-grid-content .bdp-post-categories a{
	text-transform: uppercase;
	color: var(--yellow);
	font-size: 16px;
}
.bdp-post-grid-main.bdp-design-1 .bdp-post-grid-content{ 
	text-align:left;
}
.bdp-post-content{
	color: white;
	font-family: "Europa Grotesk SH";
	font-size: 24px;
}
.bdp-post-grid-main{
	margin-right: auto!important;
    margin-left: auto!important;
}
.bdp-post-grid img{
	max-height:700px;
}
.bdp-post-categories{
	margin-bottom: -7px;
}
.bdp-post-categories a{
	border-bottom: none;
}
.bdp-post-title a {
	color: white;
	font-family:"Porkys";
}
.bdp-post-title a:visited, a:hover{
	color: var(--lpink);
}
.bdp-post-meta span{
	color: white;
	font-family: "Europa Grotesk SH";
	font-style:normal!important;
}
.bdp-post-meta span::before{
	content:"By ";
}
.bdp-post-pagination a, .bdp-post-pagination a{
	color: var(--hpink); 
	background: transparent;
	border: 1px solid white; 
	border-radius: 12px;
	font-family: 'Europa Grotesk SH'; 
	font-size: 24px; 
	padding-left: 12px; 
	padding-right: 12px; 
	padding-top:1px; 
	padding-bottom: 1px;}
.bdp-post-pagination a:hover, .bdp-post-pagination a:focus, .bdp-post-pagination a:hover, .bdp-post-pagination a:focus{
	color: white !important;
	background: var(--hpink);
}
.bdp-post-pagination .current{
	color: white !important; 
	background: var(--hpink);
	border-radius: 12px;
	font-size: 24px; 
	border: 1px solid white; 
	font-family: 'Europa Grotesk SH'; 
	padding-left: 12px; 
	padding-right: 12px; 
	padding-top:1px; 
	padding-bottom: 1px;
}
.prev.page-numbers, .next.page-numbers{
	border: 0px solid white;
}
.prev.page-numbers, .next.page-numbers {
	visibility:hidden; 
	position: relative;}
.next.page-numbers:before {
	visibility: visible;
	content: "»";
	font-size: 32px;
	font-family: 'Europa Grotesk SH';
}
.prev.page-numbers:after{
	visibility: visible;
	content: "«";
	font-size: 32px;
	font-family: 'Europa Grotesk SH';
}

/* Login/Register/Scheduler/Admin
--------------------------------------------- */
#scheduler-box{
	box-sizing: border-box;
	background: var(--transblack2);
	border-radius: 10px;
	border: 3px solid transparent;
	border-image: var(--rainbowborder);
	background-origin: border-box;
	background-clip: content-box, border-box;
	border-image-slice: 1;
	min-height:850px;
	max-width: 75%;
}
#scheduler-box label{
	color: white;
	font-family:"Porkys";
	font-size:50px;
	text-shadow: 2px 2px 2px var(--black);

}
#scheduler-box a{
	color:white;
	text-shadow: 2px 2px 2px var(--black);
}
#scheduler-box tbody a{
	color:white;
	text-shadow: 2px 2px 2px var(--black);
	font-size:30px;
	line-height:70px;

}
.ahb_m #fbuilder .ui-datepicker-calendar .ui-state-active {
    box-shadow: none;
	text-shadow: 2px 2px 2px var(--shadow)!important;
    color: var(--hpink)!important;
    border: 0px solid;
}
#scheduler-box a:hover{
	color:var(--lpink);
}
.fieldCalendar span, .slotsCalendar span{
	color: var(--orange);
	font-family:"Porkys";
	font-size:40px;
	line-height: 70px;
	text-shadow: 2px 2px 2px white;
}
#fbuilder span.uh{
	font-size:15px;
	color:white;
	text-shadow: 2px 2px 2px var(--black);
	padding-top:20px;
}
#scheduler-box tbody span{
	color: var(--orange);
	font-family:"Europa Grotesk SH";
	font-size:30px;
	line-height: 70px;
}
.slotsCalendar a{
	background: var(--black)!important;
	font-family:"Europa Grotesk SH";
	font-size:30px;
	line-height: 40px;
}
.usedSlots span{
	font-size:30px;
	color:white;
	text-shadow: 2px 2px 2px var(--black);
}
#fbuilder .pbSubmit{
	background: var(--lpink)!important;
	color: var(--hpink)!important;
	border: solid 2px var(--hpink)!important;
    width: 300px!important;
    text-align: center!important;
    font-size: 80px!important;
    height: 100px!important;
	margin-left: auto!important;
    margin-right: auto!important;
	display:flex!important;
	border-radius: 40px;
}
.cff-dialog-content a{
	color:var(--hpink)!important;
	text-shadow: none!important;
}
#fieldname4_1
{
	width: 50px;
	height: 30px;
}
#fieldname4_1:checked{
	color:var(--hpink);
}
#fbuilder .one_column{
	text-align: center;
}
#appts{
	font-size:30px;
	font-family:"Europa Grotesk SH";
	text-shadow: 2px 2px 2px var(--black);
	color:white;
	padding-left: 33%;
	padding-right: 33%;
}
.cpapp_no_wrap{
	max-width: 800px;
	width:auto;
}

/* login and register */

.um label{
	font-size:30px;
	font-family:"Europa Grotesk SH";
	text-shadow: 2px 2px 2px var(--black);
	color:white;
}
.um span{
	font-family:"Europa Grotesk SH";
	text-shadow: 2px 2px 2px var(--black);
	color:var(--lpink)!important;
	font-size:20px;
}
.um-right a{
	font-family:"Europa Grotesk SH";
	color:var(--hpink)!important;
	font-size:20px;
}
.um-col-alt-b a{
	font-family:"Europa Grotesk SH";
	text-shadow: 2px 2px 2px var(--black);
	font-size:20px;
}
#um-submit-btn{
	background:var(--hpink)
}
#um-submit-btn:hover{
	background:var(--orange)
}
.um-form-field{
	color:var(--black)!important;
	background:whitesmoke!important;
}
.um .um-field-checkbox.active:not(.um-field-radio-state-disabled) i{
	color:var(--hpink)!important;
}
.um-field-checkbox-state i{
	color:white!important;
}
.um-field-checkbox:hover i{
	color:var(--lpink);
}
/* ... */

